[gd_scene load_steps=18 format=2]

[ext_resource path="res://resources/scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://resources/backgrounds/startup.png" type="Texture" id=2]
[ext_resource path="res://resources/backgrounds/highscore.png" type="Texture" id=3]
[ext_resource path="res://resources/gamefonts/starcraft.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/gamefonts/UnrealT.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/icon/ad.png" type="Texture" id=6]
[ext_resource path="res://resources/gamefonts/SEVESBRG.TTF" type="DynamicFontData" id=7]
[ext_resource path="res://resources/scripts/ScoreTag.gd" type="Script" id=8]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.980392, 0.223529, 0.0784314, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.956863, 0.776471, 0.156863, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.980392, 0.223529, 0.0784314, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.956863, 0.776471, 0.156863, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 80
font_data = ExtResource( 7 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control"]
texture = ExtResource( 2 )
centered = false

[node name="HighScoreSprite" type="Sprite" parent="Control"]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="Label" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -747.818
margin_top = 55.0
margin_right = 746.182
margin_bottom = 351.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.945098, 0.0431373, 0.0666667, 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.0
margin_top = 121.0
margin_right = 207.0
margin_bottom = 233.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Admob" type="Button" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -211.0
margin_top = -109.908
margin_right = 207.0
margin_bottom = 90.0919
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
icon = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Admob"]
margin_left = 77.2985
margin_top = 117.571
margin_right = 348.298
margin_bottom = 201.571
custom_fonts/font = SubResource( 7 )
text = "REVIVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scorelabel" type="Label" parent="Control"]
margin_left = 32.0
margin_top = 278.0
margin_right = 322.0
margin_bottom = 355.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.945098, 0.0431373, 0.0666667, 1 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTag" type="Label" parent="Control"]
margin_left = 325.0
margin_top = 278.0
margin_right = 955.0
margin_bottom = 354.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.945098, 0.0431373, 0.0666667, 1 )
text = "0"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="Control"]
script = ExtResource( 9 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-9093002613352397/9703314252"
interstitial_id = "ca-app-pub-9093002613352397/4401642844"
rewarded_id = "ca-app-pub-9093002613352397/2049127463"
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Admob" to="." method="_on_Admob_pressed"]
[connection signal="rewarded" from="Control/AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="rewarded_video_closed" from="Control/AdMob" to="." method="_on_AdMob_rewarded_video_closed"]
[connection signal="rewarded_video_loaded" from="Control/AdMob" to="." method="_on_AdMob_rewarded_video_loaded"]
